ktcause/src/main/gen/com/dallonf/ktcause/antlr/CauseParser.java
// Generated from C:/Users/dallo/devroot/causelang/ktcause/src/main/resources/Cause.g4 by ANTLR 4.13.2
package com.dallonf.ktcause.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CauseParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, COMMENT=2, MULTILINE_COMMENT=3, NEWLINE=4, COMMA=5, COLON=6, 
		THICK_ARROW=7, EQUALS=8, PIPELINE=9, PAREN_OPEN=10, PAREN_CLOSE=11, CURLY_OPEN=12, 
		CURLY_CLOSE=13, UNDERSCORE=14, DOT=15, CARET=16, STRING_LITERAL=17, NUMBER_LITERAL=18, 
		AS=19, BRANCH=20, BREAK=21, CAUSE=22, EFFECT=23, ELSE=24, FN=25, FOR=26, 
		FUNCTION=27, FUNCTION_CAMEL=28, IF=29, IS=30, IMPORT=31, LET=32, LOOP=33, 
		OBJECT=34, OPTION=35, ONE_OF_CAMELCASE=36, RETURN=37, RETURNS=38, SET=39, 
		SIGNAL=40, TYPE=41, VARIABLE=42, WITH=43, PATH=44, IDENTIFIER=45;
	public static final int
		RULE_file = 0, RULE_typeReference = 1, RULE_identifierTypeReference = 2, 
		RULE_functionTypeReference = 3, RULE_functionTypeReferenceReturnValue = 4, 
		RULE_oneOfTypeReference = 5, RULE_functionSignatureParam = 6, RULE_declaration = 7, 
		RULE_importDeclaration = 8, RULE_importMappings = 9, RULE_importMapping = 10, 
		RULE_functionDeclaration = 11, RULE_functionReturnValue = 12, RULE_namedValueDeclaration = 13, 
		RULE_typeAliasDeclaration = 14, RULE_objectDeclaration = 15, RULE_signalDeclaration = 16, 
		RULE_objectFields = 17, RULE_objectField = 18, RULE_body = 19, RULE_block = 20, 
		RULE_blockResult = 21, RULE_singleExpressionBody = 22, RULE_statement = 23, 
		RULE_expressionStatement = 24, RULE_declarationStatement = 25, RULE_effectStatement = 26, 
		RULE_expression = 27, RULE_groupExpression = 28, RULE_blockExpression = 29, 
		RULE_functionExpression = 30, RULE_branchExpression = 31, RULE_branchWith = 32, 
		RULE_loopExpression = 33, RULE_setExpression = 34, RULE_causeExpression = 35, 
		RULE_returnExpression = 36, RULE_breakExpression = 37, RULE_stringLiteralExpression = 38, 
		RULE_numberLiteralExpression = 39, RULE_identifierExpression = 40, RULE_expressionSuffix = 41, 
		RULE_callExpressionSuffix = 42, RULE_callParam = 43, RULE_callPositionalParameter = 44, 
		RULE_memberExpressionSuffix = 45, RULE_pipeCallExpressionSuffix = 46, 
		RULE_branchOption = 47, RULE_ifBranchOption = 48, RULE_isBranchOption = 49, 
		RULE_elseBranchOption = 50, RULE_pattern = 51, RULE_captureValuePattern = 52, 
		RULE_typeReferencePattern = 53;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "typeReference", "identifierTypeReference", "functionTypeReference", 
			"functionTypeReferenceReturnValue", "oneOfTypeReference", "functionSignatureParam", 
			"declaration", "importDeclaration", "importMappings", "importMapping", 
			"functionDeclaration", "functionReturnValue", "namedValueDeclaration", 
			"typeAliasDeclaration", "objectDeclaration", "signalDeclaration", "objectFields", 
			"objectField", "body", "block", "blockResult", "singleExpressionBody", 
			"statement", "expressionStatement", "declarationStatement", "effectStatement", 
			"expression", "groupExpression", "blockExpression", "functionExpression", 
			"branchExpression", "branchWith", "loopExpression", "setExpression", 
			"causeExpression", "returnExpression", "breakExpression", "stringLiteralExpression", 
			"numberLiteralExpression", "identifierExpression", "expressionSuffix", 
			"callExpressionSuffix", "callParam", "callPositionalParameter", "memberExpressionSuffix", 
			"pipeCallExpressionSuffix", "branchOption", "ifBranchOption", "isBranchOption", 
			"elseBranchOption", "pattern", "captureValuePattern", "typeReferencePattern"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'\\n'", "','", "':'", "'=>'", "'='", "'>>'", 
			"'('", "')'", "'{'", "'}'", "'_'", "'.'", "'^'", null, null, "'as'", 
			"'branch'", "'break'", "'cause'", "'effect'", "'else'", "'fn'", "'for'", 
			"'function'", "'Function'", "'if'", "'is'", "'import'", "'let'", "'loop'", 
			"'object'", "'option'", "'OneOf'", "'return'", "'returns'", "'set'", 
			"'signal'", "'type'", "'variable'", "'with'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WHITESPACE", "COMMENT", "MULTILINE_COMMENT", "NEWLINE", "COMMA", 
			"COLON", "THICK_ARROW", "EQUALS", "PIPELINE", "PAREN_OPEN", "PAREN_CLOSE", 
			"CURLY_OPEN", "CURLY_CLOSE", "UNDERSCORE", "DOT", "CARET", "STRING_LITERAL", 
			"NUMBER_LITERAL", "AS", "BRANCH", "BREAK", "CAUSE", "EFFECT", "ELSE", 
			"FN", "FOR", "FUNCTION", "FUNCTION_CAMEL", "IF", "IS", "IMPORT", "LET", 
			"LOOP", "OBJECT", "OPTION", "ONE_OF_CAMELCASE", "RETURN", "RETURNS", 
			"SET", "SIGNAL", "TYPE", "VARIABLE", "WITH", "PATH", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cause.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CauseParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CauseParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(CauseParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CauseParser.NEWLINE, i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CauseListener ) ((CauseListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CauseListener ) ((CauseListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CauseVisitor ) return ((CauseVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(108);
					match(NEWLINE);
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3322291421184L) != 0)) {
				{
				setState(114);
				declaration();
				setState(123);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(116); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(115);
							match(NEWLINE);
							}
							}
							setState(118); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==NEWLINE );
						setState(120);
						declaration();
						}
						} 
					}
					setState(125);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				}
			}

			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(128);
				match(NEWLINE);
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeReferenceContext extends ParserRuleContext {
		public FunctionTypeReferenceContext functionTypeReference() {
			return getRuleContext(FunctionTypeReferenceContext.class,0);
		}
		public IdentifierTypeReferenceContext identifierTypeReference() {
			return getRuleContext(IdentifierTypeReferenceContext.class,0);
		}
		public OneOfTypeReferenceContext oneOfTypeReference() {
			return getRuleContext(OneOfTypeReferenceContext.class,0);
		}
		public TypeReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CauseListener ) ((CauseListener)listener).enterTypeReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CauseListener ) ((CauseListener)listener).exitTypeReference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CauseVisitor ) return ((CauseVisitor<? extends T>)visitor).visitTypeReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeReferenceContext typeReference() throws RecognitionException {
		TypeReferenceContext _localctx = new TypeReferenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_typeReference);
		try {
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTION_CAMEL:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				functionTypeReference();
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				identifierTypeReference();
				}
				break;
			case ONE_OF_CAMELCASE:
				enterOuterAlt(_localctx, 3);
				{
				setState(138);
				oneOfTypeReference();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierTypeReferenceContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(CauseParser.IDENTIFIER, 0); }
		public IdentifierTypeReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierTypeReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CauseListener ) ((CauseListener)listener).enterIdentifierTypeReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CauseListener ) ((CauseListener)listener).exitIdentifierTypeReference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CauseVisitor ) return ((CauseVisitor<? extends T>)visitor).visitIdentifierTypeReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierTypeReferenceContext identifierTypeReference() throws RecognitionException {
		IdentifierTypeReferenceContext _localctx = new IdentifierTypeReferenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifierTypeReference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionTypeReferenceContext extends ParserRuleContext {
		public TerminalNode FUNCTION_CAMEL() { return getToken(CauseParser.FUNCTION_CAMEL, 0); }
		public TerminalNode PAREN_OPEN() { return getToken(CauseParser.PAREN_OPEN, 0); }
		public TerminalNode PAREN_CLOSE() { return getToken(CauseParser.PAREN_CLOSE, 0); }
		public FunctionTypeReferenceReturnValueContext functionTypeReferenceReturnValue() {
			return getRuleContext(FunctionTypeReferenceReturnValueContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CauseParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CauseParser.NEWLINE, i);
		}
		public List<FunctionSignatureParamContext> functionSignatureParam() {
			return getRuleContexts(FunctionSignatureParamContext.class);
		}
		public FunctionSignatureParamContext functionSignatureParam(int i) {
			return getRuleContext(FunctionSignatureParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CauseParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CauseParser.COMMA, i);
		}
		public FunctionTypeReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionTypeReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CauseListener ) ((CauseListener)listener).enterFunctionTypeReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CauseListener ) ((CauseListener)listener).exitFunctionTypeReference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CauseVisitor ) return ((CauseVisitor<? extends T>)visitor).visitFunctionTypeReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionTypeReferenceContext functionTypeReference() throws RecognitionException {
		FunctionTypeReferenceContext _localctx = new FunctionTypeReferenceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionTypeReference);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(FUNCTION_CAMEL);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(144);
				match(NEWLINE);
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			match(PAREN_OPEN);
			setState(154);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(151);
					match(NEWLINE);
					}
					} 
				}
				setState(156);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(186);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(157);
				functionSignatureParam();
				setState(161);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(158);
						match(NEWLINE);
						}
						} 
					}
					setState(163);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				setState(180);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(164);
						match(COMMA);
						setState(168);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==NEWLINE) {
							{
							{
							setState(165);
							match(NEWLINE);
							}
							}
							setState(170);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(171);
						functionSignatureParam();
						setState(175);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(172);
								match(NEWLINE);
								}
								} 
							}
							setState(177);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
						}
						}
						} 
					}
					setState(182);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(183);
					match(COMMA);
					}
				}

				}
			}

			setState(191);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(188);
				match(NEWLINE);
				}
				}
				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(194);
			match(PAREN_CLOSE);
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(195);
				match(NEWLINE);
				}
				}
				setState(200);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(201);
			functionTypeReferenceReturnValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionTypeReferenceReturnValueContext extends ParserRuleContext {
		public TerminalNode RETURNS() { return getToken(CauseParser.RETURNS, 0); }
		public TypeReferenceContext typeReference() {
			return getRuleContext(TypeReferenceContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CauseParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CauseParser.NEWLINE, i);
		}
		public FunctionTypeReferenceReturnValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionTypeReferenceReturnValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CauseListener ) ((CauseListener)listener).enterFunctionTypeReferenceReturnValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CauseListener ) ((CauseListener)listener).exitFunctionTypeReferenceReturnValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CauseVisitor ) return ((CauseVisitor<? extends T>)visitor).visitFunctionTypeReferenceReturnValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionTypeReferenceReturnValueContext functionTypeReferenceReturnValue() throws RecognitionException {
		FunctionTypeReferenceReturnValueContext _localctx = new FunctionTypeReferenceReturnValueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionTypeReferenceReturnValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			match(RETURNS);
			setState(207);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(204);
				match(NEWLINE);
				}
				}
				setState(209);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(210);
			typeReference();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OneOfTypeReferenceContext extends ParserRuleContext {
		public TerminalNode ONE_OF_CAMELCASE() { return getToken(CauseParser.ONE_OF_CAMELCASE, 0); }
		public TerminalNode PAREN_OPEN() { return getToken(CauseParser.PAREN_OPEN, 0); }
		public TerminalNode PAREN_CLOSE() { return getToken(CauseParser.PAREN_CLOSE, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(CauseParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CauseParser.NEWLINE, i);
		}
		public List<TypeReferenceContext> typeReference() {
			return getRuleContexts(TypeReferenceContext.class);
		}
		public TypeReferenceContext typeReference(int i) {
			return getRuleContext(TypeReferenceContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CauseParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CauseParser.COMMA, i);
		}
		public OneOfTypeReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oneOfTypeReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CauseListener ) ((CauseListener)listener).enterOneOfTypeReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CauseListener ) ((CauseListener)listener).exitOneOfTypeReference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CauseVisitor ) return ((CauseVisitor<? extends T>)visitor).visitOneOfTypeReference(this);
			else return visitor.visitChildren(this);
		}
	}
